<resources>
    <string name="app_name">UkuleleTutor</string>
    <string name="title_activity_file_selector">FileSelector</string>
    <string name="title_activity_training">Training Mode</string>
    <string name="title_activity_Tuning">Ukulele Tuning</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_playing">PlayingActivity</string>
    <string name="c_g4_c4_e4_c5">코드 C : G4-C4-E4-C5 (도미솔)기본 화음</string>
    <string name="c_g4_c4_e4_a4s">코드 C7: G4-C4-E4-A#4 도-미-솔-라#</string>
    <string name="c_g4_d4s_g_c">코드 Cm: G4-D4s-G4-C5 솔레#솔도</string>
    <string name="btntxt_back">돌아가기</string>
    <string name="btntxt_play">소리 듣기</string>
    <string name="btntxt_stop">소리 끄기</string>
    <string name="title_activity_chord_cm7">ChordCm7</string>
    <string name="title_activity_chord_d_">ChordD_Activity</string>
    <string name="Label_Setup">설정</string>
    <string name="Label_UpdateList">음악파일 업데이트</string>
    <string name="Label_ChordTable">주요 코드표</string>
    <string name="Label_TrainingFinger">혼자 연습하기</string>
    <string name="Label_TrainingStrumming">스트럼 연습하기</string>
    <string name="Label_TrainingChord">코드 연습하기</string>
    <string name="Label_TrainingWithPlay">연주하며 연습하기</string>
    <string name="Label_MainTitle">우쿨렐레를 배우자</string>
    <string name="Label_first_start">맨 처음 시작하기</string>
    <string name="Label_HowtoReadTAB">타브 악보 읽는 법</string>
    <string name="Label_about_ukulele">우쿨렐레 설명</string>
    <string name="Label_Strum_Pattern">주요 스트럼 패턴</string>
    <string name="Label_aboutThisApp">이 앱에 대하여 설정</string>
    <string name="labelSetup">설정</string>
    <string name="labelTuningUkulele">우쿨렐레 튜닝</string>
    <string name="explainToTuneUkulele">우쿨렐레를 튜닝 하세요</string>
    <string name="txtBasicHighGTune">기본(High-G) 튜닝</string>
    <string name="txtAdjustNom">Adjust NOB</string>
    <string name="txtTitleHelpTab">타브 악보 보는 법</string>
    <string name="txtSelectFile">연습할 파일을 선택하세요.</string>
    <string name="txtSelectPattern">연습할 패턴을 선택하세요.</string>
    <string name="chkLabelTrainigMetronomOnOff">연습할 때 메트로놈 켜기</string>
    <string name="chkLabelPlayingMetronomOnOff">연주할 때 메트로놈 켜기</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
