<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="landscape"
    android:background="@drawable/bg_title"
    tools:context="com.example.ahnsik.ukuleletutor.MainActivity">

    <TextView
        android:id="@+id/txtAppTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif"
        android:text="@string/Label_first_start"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnReturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_shape"
        android:fontFamily="sans-serif"
        android:text="@string/btntxt_back"
        android:textColor="#333"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnChordTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_shape"
        android:fontFamily="sans-serif"
        android:text="@string/Label_ChordTable"
        android:textColor="#333"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnHowtoReadTAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_shape"
        android:fontFamily="sans-serif"
        android:text="@string/Label_HowtoReadTAB"
        android:textColor="#333"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btnChordTable"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnTuning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_shape"
        android:fontFamily="sans-serif"
        android:text="@string/labelTuningUkulele"
        android:textColor="#333"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btnHowtoReadTAB"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnExplainUkulele"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_shape"
        android:fontFamily="sans-serif"
        android:text="@string/Label_about_ukulele"
        android:textColor="#333"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btnTuning"
        app:layout_constraintEnd_toEndOf="parent" />


    <Button
        android:id="@+id/btnSetup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_shape"
        android:fontFamily="sans-serif"
        android:text="@string/Label_aboutThisApp"
        android:textColor="#333"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
