<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".TopMenuFragment">

    <Button
        android:id="@+id/btnGuideTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_shape"
        android:fontFamily="@font/jeonnamfont"
        android:text="@string/Label_first_start"
        android:textColor="#333"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnPlaying"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_shape"
        android:fontFamily="@font/jeonnamfont"
        android:text="@string/Label_TrainingWithPlay"
        android:textColor="#333"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

<!--    <Button-->
<!--        android:id="@+id/btnTraining"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginBottom="16dp"-->
<!--        android:layout_marginEnd="16dp"-->
<!--        android:background="@drawable/button_shape"-->
<!--        android:fontFamily="@font/jeonnamfont"-->
<!--        android:textColor="#333"-->
<!--        android:text="@string/Label_TrainingFinger"-->
<!--        android:textSize="24sp"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/btnPlaying"-->
<!--        app:layout_constraintEnd_toEndOf="parent" />-->

    <Button
        android:id="@+id/btnChordTraining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_shape"
        android:fontFamily="@font/jeonnamfont"
        android:text="@string/Label_TrainingChord"
        android:textColor="#333"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btnStrumTraining"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnStrumTraining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_shape"
        android:fontFamily="@font/jeonnamfont"
        android:textColor="#333"
        android:text="@string/Label_TrainingStrumming"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btnPlaying"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txtAppTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/katuri"
        android:shadowColor="#333"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="4"
        android:text="우쿨렐레를 배우자"
        android:textColor="#fabc11"
        android:textSize="48sp"
        android:typeface="sans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>